# financial-metric-forecasting

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CITATION.cff  LICENSE-CODE  LICENSE-DOCS  README.md  pyproject.toml  run_best.sh
.github/workflows/: ci.yml
docs/: FORECASTING.md
docs/eda/: 01_targets_and_persistence.ipynb  01_targets_and_persistence.py  02_features.ipynb  02_features.py  03_data_quality.ipynb  03_data_quality.py
docs/knowledge/: backlog.md  learnings.md
docs/specs/: alternative_models.md
fmf/: __init__.py
fmf/data/: __init__.py  connectors.py  schema.sql  sql_safety.py
fmf/data/edgar/: __init__.py  _http.py  companyfacts.py  concept_map.py  normalize.py  submissions.py  validation.py
fmf/data/yfinance/: __init__.py  _client.py  consensus.py  prices.py  securities.py
fmf/equity/forecasting/evaluation/: _backtester_config.py  _feature_cap.py  _fold_generator.py  _target_lookup.py  backtester.py  metrics.py  prediction_cache.py
fmf/equity/forecasting/models/: _simplex.py  _tirex_preprocessing.py  baselines.py  lightgbm_model.py  meta_learner.py  protocols.py  tirex_model.py
fmf/features/: __init__.py  as_of_grid.py  builtin_features.py  derived.py  feature_registry.py  matrix_builder.py  point_in_time.py
fmf/features/audit/: __init__.py  coverage.py  sources.py
fmf/features/composites/: __init__.py  _beneish.py  _ccc.py  _dechow.py  _mohanram.py  _piotroski.py
fmf/pipeline/: dataset_builder.py  forecast_runner.py  quality_checks.py
fmf/research/: fmf_runs.py
reports/: aapl_fy2015_q4_diagnosis.txt  balance_sheet_concept_probe.txt  balance_sheet_coverage_diagnostic.txt  coverage_audit.json  feature_matrix.parquet  headline_scoreboard.json  instant_period_classification_probe.txt  quarterly_period_coverage.txt  raw_column_coverage.txt
scripts/: benchmark.py  build_feature_matrix.py  build_fixture.py  coverage_audit.py  fmf_runs_cli.py  ingest_edgar.py  ingest_yfinance.py  run_cluster_win_gate.py  run_headline_scoreboard.py  run_pipeline.py
tests/: conftest.py
tests/data/: test_anchor_validation.py  test_connectors.py  test_fixture_integrity.py  test_schema.py  test_sql_safety.py
tests/data/edgar/: test_companyfacts.py  test_concept_map.py  test_http.py  test_ingest_edgar.py  test_normalize.py  test_submissions.py
tests/data/yfinance/: test_client.py  test_consensus.py  test_ingest_yfinance.py  test_prices.py  test_securities.py
tests/equity/forecasting/evaluation/: _fixture_helpers.py  test_backtester.py  test_backtester_config.py  test_backtester_e2e.py  test_backtester_invariants.py  test_feature_cap.py  test_fold_generator.py  test_metrics.py  test_prediction_cache.py  test_target_lookup.py
tests/equity/forecasting/models/: test_baselines.py  test_lightgbm_model.py  test_meta_learner.py  test_simplex.py  test_tirex_model.py
tests/features/: test_as_of_grid.py  test_builtin_features.py  test_coverage_audit.py  test_derived.py  test_feature_registry.py  test_matrix_builder.py  test_point_in_time.py
tests/features/audit/: test_coverage.py  test_sources.py
tests/features/composites/: test_beneish.py  test_ccc.py  test_cluster_registration.py  test_dechow.py  test_mohanram.py  test_piotroski.py
tests/fixtures/: known_financials.json  mini.duckdb
tests/fixtures/sample_filings/: AAPL_companyfacts_min.json
tests/fixtures/sample_filings/api/xbrl/companyfacts/: CIK0000019617.json
tests/fixtures/sample_filings/submissions/: CIK0000320193.json
tests/fixtures/sample_yfinance/: AAPL_earnings_estimate.csv  AAPL_info.json  AAPL_prices.csv  AAPL_revenue_estimate.csv  MSFT_info.json  MSFT_prices.csv
tests/fixtures/tirex_outputs/: 0bda2f49f517e64a.json  3373fb596f3f7e9f.json  55465709b93f90c3.json  _make_fixtures.py
tests/pipeline/: test_cli.py  test_dataset_builder.py  test_forecast_runner.py  test_quality_checks.py
tests/research/: test_benchmark_cli.py  test_fmf_runs.py  test_fmf_runs_cli.py
