[project]
name = "fmf-public"
version = "0.0.1"
description = "Financial Metrics Forecasting on public data (SEC EDGAR + yfinance). Methodology designed at Bavest, reproduced here on a public-data substrate."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ritvik Maini" }]
dependencies = [
    "duckdb>=1.0.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "nbstripout>=0.7.0",
    "pandas>=3.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fmf"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B018"]
"notebooks/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "fmf.data.connectors",
    "fmf.data.sql_safety",
    "fmf.data.edgar._http",
    "fmf.data.edgar.submissions",
    "fmf.data.edgar.companyfacts",
    "fmf.data.edgar.concept_map",
    "fmf.data.edgar.normalize",
    "fmf.data.edgar.validation",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that take >30s; excluded from default run",
    "live: tests requiring network or real TiRex weights; live lane only",
]
addopts = "-m 'not slow and not live'"
