[project]
name = "fmf-public"
version = "0.0.1"
description = "Financial Metrics Forecasting on public data (SEC EDGAR + yfinance). Methodology designed at Bavest, reproduced here on a public-data substrate."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ritvik Maini" }]
dependencies = [
    "duckdb>=1.0.0",
    "httpx>=0.28.1",
    "yfinance>=1.4.1",
    "pyarrow>=17.0.0",
    "lightgbm>=4.5,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "nbstripout>=0.7.0",
    "pandas>=3.0.3",
    "typer>=0.12.0",
]

[project.scripts]
fmf-runs = "scripts.fmf_runs_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fmf"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B018"]
"notebooks/**/*.py" = ["E402"]
# sklearn-style X for feature matrices in the model wrapper + its tests + protocol.
"fmf/equity/forecasting/models/lightgbm_model.py" = ["N803", "N806"]
"fmf/equity/forecasting/models/protocols.py" = ["N803"]
"fmf/equity/forecasting/models/meta_learner.py" = ["N803", "N806"]
"tests/equity/forecasting/models/test_lightgbm_model.py" = ["N803", "N806", "B018"]
"tests/equity/forecasting/models/test_meta_learner.py" = ["N803", "N806", "B018"]
"tests/equity/forecasting/models/test_simplex.py" = ["B018"]
# S10 backtester orchestrator uses sklearn-style X for feature matrices.
"fmf/equity/forecasting/evaluation/backtester.py" = ["N803", "N806"]
"tests/equity/forecasting/evaluation/test_backtester_invariants.py" = ["N803", "N806"]
"tests/equity/forecasting/evaluation/test_backtester.py" = ["N803", "N806"]
"tests/equity/forecasting/evaluation/test_backtester_e2e.py" = ["N803", "N806"]
"tests/equity/forecasting/evaluation/test_feature_cap.py" = ["N803", "N806"]
"tests/equity/forecasting/evaluation/test_target_lookup.py" = ["N806"]
# Typer CLI conventionally puts typer.Option(...) in argument defaults.
"scripts/run_pipeline.py" = ["B008"]
"scripts/benchmark.py" = ["B008"]
"scripts/fmf_runs_cli.py" = ["B008"]
# Pipeline forecast runner uses sklearn-style X for the feature matrix.
"fmf/pipeline/forecast_runner.py" = ["N806"]
# Pipeline tests use sklearn-style X for feature matrices.
"tests/pipeline/test_forecast_runner.py" = ["N806"]
"tests/pipeline/test_cli.py" = ["N806"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "fmf.data.connectors",
    "fmf.data.sql_safety",
    "fmf.data.edgar._http",
    "fmf.data.edgar.submissions",
    "fmf.data.edgar.companyfacts",
    "fmf.data.edgar.concept_map",
    "fmf.data.edgar.normalize",
    "fmf.data.edgar.validation",
    "fmf.features.audit.coverage",
    "fmf.features.audit.sources",
    "fmf.data.yfinance._client",
    "fmf.data.yfinance.prices",
    "fmf.data.yfinance.consensus",
    "fmf.data.yfinance.securities",
    "fmf.features.point_in_time",
    "fmf.features.derived",
    "fmf.features.feature_registry",
    "fmf.features.builtin_features",
    "fmf.features.as_of_grid",
    "fmf.features.matrix_builder",
    "fmf.equity.forecasting.models.lightgbm_model",
    "fmf.equity.forecasting.models.protocols",
    "fmf.equity.forecasting.models.tirex_model",
    "fmf.equity.forecasting.models._tirex_preprocessing",
    "fmf.equity.forecasting.models._simplex",
    "fmf.equity.forecasting.models.meta_learner",
    "fmf.equity.forecasting.evaluation.metrics",
    "fmf.pipeline.dataset_builder",
    "fmf.pipeline.forecast_runner",
    "fmf.pipeline.quality_checks",
    "fmf.research.fmf_runs",
    "scripts.coverage_audit",
    "scripts.build_feature_matrix",
    "scripts.run_pipeline",
    "scripts.benchmark",
    "scripts.fmf_runs_cli",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that take >30s; excluded from default run",
    "live: tests requiring network or real TiRex weights; live lane only",
]
addopts = "-m 'not slow and not live'"
